--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,13 +4,33 @@ nav {
     left: 0;
     right: 0;
     height: 40px;
-    display: flex;
-    align-items: center;
-    background-color: ghostwhite;
-    justify-content: space-around;
 }
 
-li {
-    display: inline;
-    padding: 30px;
+nav ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #374151;
+    color: white;
+    gap: 5rem;
+    padding: 0.7em;
+}
+
+.link {
+    color: #374151;
+    text-decoration: none;
+}
+
+.active {
+    color: #2563eb;
+    font-weight: 600;
+}
+
+
+.cartBadge {
+    background-color: #2563eb;
+    color: white;
+    border-radius: 999px;
+    padding: 0.25rem 0.5rem;
+    font-size: 0.8rem;
 }
