--- a/src/components/showcase/Showcase.module.css
+++ b/src/components/showcase/Showcase.module.css
@@ -1,5 +1,6 @@
 .sliderContainer {
-    max-height: 600px;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 .itemContainer {
@@ -16,8 +17,13 @@
 }
 
 .itemContainer h2 {
-    font-size: 1rem;
-    font-weight: 500;
+    font-size: 0.95rem;
+    line-height: 1.3;
+    min-height: calc(2 * 1.3em);
     text-align: center;
-    color: #1f2933;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
